Mon Sep 27 14:47:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/String_Base.h:
          Doxygen changes

        * ace/Svc_Conf_Lexer.cpp:
          Const changes

        * bin/msvc_static_order.lst:
          Some updates, but this list is very outdated

Mon Sep 27 14:27:25 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:

          Added Matthew Waller <matthewrwaller at gmail dot com>

Mon Sep 27 14:08:11 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Log_Msg.h:
        * ace/Log_Msg.cpp:
          Fixed compilation with ACE_HAS_DUMP. The later happens because
          ACE_Log_Msg depends on ACE_Atomic_Op and ACE_Atomic_Op needs
          ACE_DEBUG when ACE_HAS_DUMP is defined. This change moves
          include of ace/Atomic_Op.h from header to CPP file and adds
          forward declaration for ACE_Atomic_Op.

        * ace/Atomic_Op_T.cpp:
        * ace/Guard_T.cpp:
          Removed unnecessary this paramater when doing ACE_END_DUMP.

        * examples/Misc/test_dump.h:
        * examples/Threads/thread_specific.cpp:
          Fixed logging in these tests.

Mon Sep 27 11:24:02 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * examples/C++NPv2/AIO_Client_Logging_Daemon.h:
          Another attempt to fix compile error.

Mon Sep 27 09:42:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Enable export file check, use TAO_IDL to generate export files or
          remove the generated by line from the export file itself. Currently
          only for CIAO and DAnCE

Sat Sep 25 06:41:39 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
          Modified ACE::is_equal() comment once again to make fuzz happy.

Fri Sep 24 14:52:44 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Pipe.{h inl cpp}: Added two new methods, close_read() and
          close_write() to close individual pipe handles. Refactored the