@@ -78,7 +78,7 @@ public:
   int acquire (ACE_Time_Value &tv);
 
   /**
-   * If @a tv == 0 the call <acquire()> directly.  Otherwise, Block the
+   * If @a tv == 0 the call acquire() directly.  Otherwise, Block the
    * thread until we acquire the mutex or until @a tv times out, in
    * which case -1 is returned with @c errno == @c ETIME.  Note that
    * @a tv is assumed to be in "absolute" rather than "relative" time.
